--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,12 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
-  width: 100vw;
+  -moz-osx-font-smoothing: grayscale;  
+}
+
+#root {
+	height: 100vh;
+  	width: 100vw;
 }
 
 code {
