--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.googleLoginBtn {
+	position: absolute !important;
+	top: 0;
+	display: none;
+}
